--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -138,7 +138,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "6.0.1",
     "react-native-easy-view-transformer": "^1.2.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-keychain": "7.0.0",
     "react-native-linear-gradient": "2.5.6",
     "react-native-markdown-display": "^7.0.0-alpha.2",
@@ -148,7 +148,7 @@
     "react-native-qrcode-svg": "6.0.6",
     "react-native-quick-base64": "^2.0.6",
     "react-native-randombytes": "3.6.0",
-    "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated": "3.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-skeleton-placeholder": "^5.2.0",
