--- a/apps/wallet-mobile/.env
+++ b/apps/wallet-mobile/.env
@@ -1,12 +1,15 @@
-BUILD_VARIANT=NIGHTLY
-SHOW_INIT_DEBUG_SCREEN=false
-PREFILL_WALLET_INFO=true
-USE_TESTNET=true
-COMMIT=46486d72
-UI_V2=true
+COMMIT=8bea7f31
+
+BUILD_VARIANT=STAGING
+AMPLITUDE_API_KEY=52a980fd5fb8da5fc680687d7e991e18
+SENTRY=https://fb3745d47d994059917e358dae581466@o1138840.ingest.sentry.io/4505319746764800
+
+DISABLE_LOG_BOX=true
 SHOW_PROD_POOLS_IN_DEV=true
-DISABLE_BACKGROUND_SYNC=false
-SENTRY=https://59637d7dcb274b6a9e9f708e0082b3d5@o1138840.ingest.sentry.io/6260389
-WALLET_1_MNEMONIC=abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon share
-#WALLET_1_NETWORK_ID=1
-WALLET_2_MNEMONIC=abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon address
+USE_TESTNET=true
+
+WALLET_1_MNEMONIC=abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon address
+WALLET_1_NETWORK_ID=300
+
+WALLET_2_NETWORK_ID=300
+WALLET_2_MNEMONIC=abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon share
