fix(transactions): Use local timezone to display transaction time (#2494)

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "scripts": {
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "prerelease:android:nightly": "bundle install && ./scripts/update-commit.sh",
-    "release:android:nightly": "bundle exec fastlane android release --env nightly",
-    "prerelease:android:production": "bundle install && ./scripts/update-commit.sh",
-    "release:android:production": "bundle exec fastlane android release --env production",
     "e2e:appium-test-android": "./node_modules/.bin/wdio tests/config/wdio.android.local.conf.ts --suite happyPathTx",
     "e2e:appium-test-android-ledger": "./node_modules/.bin/wdio tests/config/wdio.android.local.conf.ts --suite ledger",
     "e2e:build-android": "detox build -c android.emu.mainnet.release",
@@ -18,22 +14,26 @@
     "e2e:test-ios": "detox test -c ios.release",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
-    "prerelease:ios:nightly": "bundle install && ./scripts/update-commit.sh && npx pod-install",
-    "release:ios:nightly": "bundle exec fastlane ios release --env nightly",
-    "prerelease:ios:production": "bundle install && ./scripts/update-commit.sh && npx pod-install",
-    "release:ios:production": "bundle exec fastlane ios release --env production",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
     "lint:fix": "yarn lint:typescript --fix",
     "lint:typescript": "eslint --max-warnings=0 ./src -c ./.eslintrc.js",
     "manage-translations": "node ./translations/translation-runner.js",
     "prettify": "prettier --write ./src ./e2e ./storybook ./translations --config .prettierrc",
     "purge-translations": "rimraf ./translations/messages",
-    "run:ios:dev:debug": "ENVFILE=.env react-native run-ios --mode=Debug --scheme=yoroi --verbose",
-    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --mode=Debug --scheme=nightly --verbose",
-    "run:ios:nightly:release": "ENVFILE=.env.nightly react-native run-ios --mode=Release --scheme=nightly --verbose",
+    "prerelease:android:nightly": "bundle install && ./scripts/update-commit.sh",
+    "release:android:nightly": "bundle exec fastlane android release --env nightly",
+    "prerelease:android:production": "bundle install && ./scripts/update-commit.sh",
+    "release:android:production": "bundle exec fastlane android release --env production",
+    "prerelease:ios:nightly": "bundle install && ./scripts/update-commit.sh && npx pod-install",
+    "release:ios:nightly": "bundle exec fastlane ios release --env nightly",
+    "prerelease:ios:production": "bundle install && ./scripts/update-commit.sh && npx pod-install",
+    "release:ios:production": "bundle exec fastlane ios release --env production",
     "run:android:dev:debug": "ENVFILE=.env react-native run-android --mode=devDebug --appIdSuffix=dev --verbose",
     "run:android:nightly:debug": "ENVFILE=.env.nightly react-native run-android --mode=nightlyDebug --appIdSuffix=nightly --verbose",
     "run:android:nightly:release": "ENVFILE=.env.nightly react-native run-android --mode=nightlyRelease --appIdSuffix=nightly --verbose",
+    "run:ios:dev:debug": "ENVFILE=.env react-native run-ios --mode=Debug --scheme=yoroi --verbose",
+    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --mode=Debug --scheme=nightly --verbose",
+    "run:ios:nightly:release": "ENVFILE=.env.nightly react-native run-ios --mode=Release --scheme=nightly --verbose",
     "stag-ios": "react-native run-ios --scheme=emurgo-staging --configuration=Debug",
     "prestart": "sb-rn-get-stories",
     "start": "yarn react-native start --reset-cache --verbose",
@@ -154,6 +154,7 @@
     "react-native-skeleton-placeholder": "^5.2.0",
     "react-native-svg": "13.8.0",
     "react-native-tab-view": "^3.1.1",
+    "react-native-timezone": "^2.3.0",
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.3",
     "reselect": "^4.0.0",
