WIP Fix ledger voting on v5

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -83,13 +83,14 @@
   },
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "^6.0.0",
+    "@cardano-foundation/ledgerjs-hw-app-cardanoV5": "npm:@cardano-foundation/ledgerjs-hw-app-cardano@5",
     "@emurgo/cip14-js": "^3.0.1",
     "@emurgo/cip4-js": "1.0.7",
     "@emurgo/cross-csl-mobile": "^2.3.0",
     "@emurgo/csl-mobile-bridge": "^5.1.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
-    "@emurgo/yoroi-lib": "^0.5.2",
+    "@emurgo/yoroi-lib": "file:/Users/michalszorad/Documents/GitHub/yoroi-lib",
     "@formatjs/intl-datetimeformat": "^6.7.0",
     "@formatjs/intl-getcanonicallocales": "^2.1.0",
     "@formatjs/intl-locale": "^3.2.1",
