--- a/apps/wallet-mobile/android/gradle.properties
+++ b/apps/wallet-mobile/android/gradle.properties
@@ -45,3 +45,6 @@ hermesEnabled=true
 
 # Increases the sql lite limit default 6MB
 AsyncStorage_db_size_in_MB=32
+
+#avoid adding the stdlib by default
+kotlin.stdlib.default.dependency=false
