--- a/apps/wallet-mobile/android/app/src/main/AndroidManifest.xml
+++ b/apps/wallet-mobile/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/BootTheme">
+      android:theme="@style/BootTheme"
+      android:networkSecurityConfig="@xml/network_security_config">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
