--- a/apps/wallet-mobile/android/build.gradle
+++ b/apps/wallet-mobile/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = 24
         compileSdkVersion = 33
         targetSdkVersion = 33
-        kotlinVersion = "1.7.0"
+        kotlinVersion = "1.8.20"
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
     }
@@ -19,19 +19,70 @@ buildscript {
         maven {
             url 'https://www.jitpack.io'
         }
+      
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.3.1"
         classpath "com.facebook.react:react-native-gradle-plugin"
         classpath "org.mozilla.rust-android-gradle:plugin:0.9.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
+
+        
     }
 }
+def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
 
 allprojects {
+
+     // https://github.com/facebook/react-native/issues/35210
+    configurations.all {
+        resolutionStrategy {
+            force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+        }
+    }
+
     repositories {
+
+        mavenLocal()
+        google()
+        jcenter()
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        maven {
+            // All of Detox' artifacts are provided via the npm module
+            url("$rootDir/../node_modules/detox/Detox-android")
+        }
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
+        // react-native-ble-plx setup
+        // https://github.com/Polidea/react-native-ble-plx (@2.0.0)
+        maven { url 'https://jitpack.io' }
+       
         maven {
             // expo-camera bundles a custom com.google.android:cameraview
             url "$rootDir/../../../node_modules/expo-camera/android/maven"
+        }
+    }
+
+    afterEvaluate {
+        if (it.hasProperty('android')){
+            android {
+                defaultConfig {
+                    minSdkVersion rootProject.ext.minSdkVersion // Replace '21' with whatever suites your case
+                }
+            }
         }
     }
 }
