--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -11,6 +11,7 @@
     "e2e:build-ios": "detox build -c ios.release",
     "e2e:test-android": "detox test -c android.emu.mainnet.release",
     "e2e:test-android-debug": "detox test -c android.emu.mainnet.debug",
+    "e2e:test-android-dev-debug": "detox build --configuration android.emu.debug",
     "e2e:test-ios": "detox test -c ios.release",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
