changes to gradle build

--- a/apps/wallet-mobile/android/app/build.gradle
+++ b/apps/wallet-mobile/android/app/build.gradle
@@ -223,9 +223,11 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-
-   
       
+}
+
+configurations.implementation {
+exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
 }
 
 apply from: file("../../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
