--- a/packages/swap-react/package.json
+++ b/packages/swap-react/package.json
@@ -59,7 +59,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@yoroi/types": "1.0.4"
+    "@yoroi/types": "1.0.4",
+    "immer": "^10.0.2"
   },
   "peerDependencies": {
     "react": ">= 16.8.0 <= 19.0.0",
