--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -17,6 +17,8 @@
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
     "lint:fix": "yarn lint:typescript --fix",
     "lint:typescript": "eslint --max-warnings=0 ./src -c ./.eslintrc.js",
+    "metrics-pull": "ampli pull mobile",
+    "metrics-status": "ampli status",
     "manage-translations": "node ./translations/translation-runner.js",
     "prettify": "prettier --write ./src ./e2e ./storybook ./translations --config .prettierrc",
     "purge-translations": "rimraf ./translations/messages",
@@ -82,6 +84,7 @@
     ]
   },
   "dependencies": {
+    "@amplitude/analytics-react-native": "^1.3.1",
     "@cardano-foundation/ledgerjs-hw-app-cardano": "^6.0.0",
     "@emurgo/cip14-js": "^3.0.1",
     "@emurgo/cip4-js": "1.0.7",
@@ -97,7 +100,7 @@
     "@formatjs/intl-pluralrules": "^5.2.1",
     "@formatjs/intl-relativetimeformat": "^11.2.1",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.3",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^7.1.0",
     "@react-native-community/slider": "^4.4.2",
@@ -167,6 +170,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@amplitude/ampli": "^1.31.5",
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.20.0",
     "@babel/node": "^7.15.8",
