--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -110,6 +110,7 @@
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
     "@yoroi/metrics-react-native": "1.0.0",
+    "@yoroi/swap-react": "1.0.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
@@ -175,7 +176,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-transform-arrow-functions": "^7.21.5",
     "@babel/plugin-transform-shorthand-properties": "^7.18.6",
-    "@babel/plugin-transform-template-literals": "^7.18.9",
+  "@babel/plugin-transform-template-literals": "^7.18.9",
     "@babel/preset-env": "^7.20.0",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.20.0",
