--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -9,7 +9,9 @@
     "e2e:build:android:debug": "detox build -c android.emu.mainnet.debug",
     "e2e:test:android:debug": "detox test -c android.emu.mainnet.debug",
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.debug",
+    "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
     "e2e:test:android:dev:debug": "detox test --configuration android.emu.debug",
+    "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
     "e2e:build:ios": "detox build -c ios.release",
     "e2e:test:ios": "detox test -c ios.release",
     "e2e:build:ios:dev:debug": "detox build --configuration ios.sim.debug",
