--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -89,7 +89,7 @@
     "@emurgo/csl-mobile-bridge": "^5.1.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
-    "@emurgo/yoroi-lib": "^0.5.2",
+    "@emurgo/yoroi-lib": "0.5.3",
     "@formatjs/intl-datetimeformat": "^6.7.0",
     "@formatjs/intl-getcanonicallocales": "^2.1.0",
     "@formatjs/intl-locale": "^3.2.1",
