--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -8,8 +8,14 @@
     "e2e:test:android:dev:debug": "detox test --configuration android.emu.dev.debug",
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
     "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
-    "e2e:build:ios:dev:debug": "detox build --configuration ios.sim.debug",
-    "e2e:test:ios:dev:debug": "detox test --configuration ios.sim.debug", 
+    "e2e:build:ios:yoroi:debug": "detox build --configuration ios.sim.yoroi.debug --verbose",
+    "e2e:test:ios:yoroi:debug": "detox test --configuration ios.sim.yoroi.debug",
+    "e2e:build:ios:yoroi:release": "detox build --configuration ios.sim.yoroi.release",
+    "e2e:test:ios:yoroi:release": "detox test --configuration ios.sim.yoroi.release",
+    "e2e:build:ios:nightly:debug": "detox build --configuration ios.sim.nightly.debug",
+    "e2e:test:ios:nightly:debug": "detox test --configuration ios.sim.nightly.debug", 
+    "e2e:build:ios:nightly:release": "detox build --configuration ios.sim.nightly.release",
+    "e2e:test:ios:nightly:release": "detox test --configuration ios.sim.nightly.release",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
@@ -29,8 +35,8 @@
     "run:android:dev:debug": "ENVFILE=.env react-native run-android --mode=devDebug --appIdSuffix=dev --verbose",
     "run:android:nightly:debug": "ENVFILE=.env.nightly react-native run-android --mode=nightlyDebug --appIdSuffix=nightly --verbose",
     "run:android:nightly:release": "ENVFILE=.env.nightly react-native run-android --mode=nightlyRelease --appIdSuffix=nightly --verbose",
-    "run:ios:dev:debug": "ENVFILE=.env react-native run-ios --mode=Debug --scheme=yoroi --verbose",
-    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --mode=Debug --scheme=nightly --verbose",
+    "run:ios:yoroi:debug": "ENVFILE=.env react-native run-ios --mode=Debug --scheme=yoroi --verbose",
+    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --simulator --mode=Debug --scheme=nightly --verbose",
     "run:ios:nightly:release": "ENVFILE=.env.nightly react-native run-ios --mode=Release --scheme=nightly --verbose",
     "stag-ios": "react-native run-ios --scheme=emurgo-staging --configuration=Debug",
     "prestart": "sb-rn-get-stories",
