--- a/apps/wallet-mobile/.env
+++ b/apps/wallet-mobile/.env
@@ -4,7 +4,7 @@ BUILD_VARIANT=STAGING
 AMPLITUDE_API_KEY=52a980fd5fb8da5fc680687d7e991e18
 SENTRY=https://fb3745d47d994059917e358dae581466@o1138840.ingest.sentry.io/4505319746764800
 
-DISABLE_LOG_BOX=true
+DISABLE_LOGBOX=true
 SHOW_PROD_POOLS_IN_DEV=true
 USE_TESTNET=true
 
