chore: updated cli cmd for ampli

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -18,8 +18,8 @@
     "lint:fix": "yarn lint:typescript --fix",
     "lint:typescript": "eslint --max-warnings=0 ./src -c ./.eslintrc.js",
     "manage-translations": "node ./translations/translation-runner.js",
-    "metrics-pull": "ampli pull mobile",
-    "metrics-status": "ampli status",
+    "metrics:pull": "ampli pull mobile",
+    "metrics:status": "ampli status --instanceName=track",
     "prettify": "prettier --write ./src ./e2e ./storybook ./translations --config .prettierrc",
     "purge-translations": "rimraf ./translations/messages",
     "prerelease:android:nightly": "bundle install && ./scripts/update-commit.sh",
