--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -96,6 +96,7 @@
     "@formatjs/intl-numberformat": "^8.4.1",
     "@formatjs/intl-pluralrules": "^5.2.1",
     "@formatjs/intl-relativetimeformat": "^11.2.1",
+    "@gorhom/bottom-sheet": "^4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.3",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/clipboard": "^1.5.1",
@@ -176,7 +177,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-transform-arrow-functions": "^7.21.5",
     "@babel/plugin-transform-shorthand-properties": "^7.18.6",
-  "@babel/plugin-transform-template-literals": "^7.18.9",
+    "@babel/plugin-transform-template-literals": "^7.18.9",
     "@babel/preset-env": "^7.20.0",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.20.0",
