--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -2,20 +2,22 @@
   "name": "@yoroi/wallet-mobile",
   "version": "4.12.1",
   "private": true,
+  "e2ePath": {
+    "ios": "./e2e/tests/_ios",
+    "android": "./e2e/tests/_android"
+  },
   "scripts": {
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
-    "e2e:test:android:dev:debug": "detox test --configuration android.emu.dev.debug",
+    "e2e:test:android:dev:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.dev.debug",
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
-    "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
-    "e2e:build:ios:yoroi:debug": "detox build --configuration ios.sim.yoroi.debug --verbose",
-    "e2e:test:ios:yoroi:debug": "detox test --configuration ios.sim.yoroi.debug",
-    "e2e:build:ios:yoroi:release": "detox build --configuration ios.sim.yoroi.release",
-    "e2e:test:ios:yoroi:release": "detox test --configuration ios.sim.yoroi.release",
+    "e2e:test:android:nightly:release": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.release",
+    "e2e:build:ios:yoroi:debug": "detox build --configuration ios.sim.yoroi.debug",
+    "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
     "e2e:build:ios:nightly:debug": "detox build --configuration ios.sim.nightly.debug",
-    "e2e:test:ios:nightly:debug": "detox test --configuration ios.sim.nightly.debug", 
+    "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
     "e2e:build:ios:nightly:release": "detox build --configuration ios.sim.nightly.release",
-    "e2e:test:ios:nightly:release": "detox test --configuration ios.sim.nightly.release",
+    "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
@@ -36,7 +38,7 @@
     "run:android:nightly:debug": "ENVFILE=.env.nightly react-native run-android --mode=nightlyDebug --appIdSuffix=nightly --verbose",
     "run:android:nightly:release": "ENVFILE=.env.nightly react-native run-android --mode=nightlyRelease --appIdSuffix=nightly --verbose",
     "run:ios:yoroi:debug": "ENVFILE=.env react-native run-ios --mode=Debug --scheme=yoroi --verbose",
-    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --simulator --mode=Debug --scheme=nightly --verbose",
+    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --mode=Debug --scheme=nightly --verbose",
     "run:ios:nightly:release": "ENVFILE=.env.nightly react-native run-ios --mode=Release --scheme=nightly --verbose",
     "stag-ios": "react-native run-ios --scheme=emurgo-staging --configuration=Debug",
     "prestart": "sb-rn-get-stories",
@@ -263,7 +265,8 @@
     "ts-node": "^10.7.0",
     "ts-sinon": "^2.0.2",
     "typescript": "4.8.4",
-    "typescript-coverage-report": "^0.6.4"
+    "typescript-coverage-report": "^0.6.4",
+    "yargs": "^17.7.2"
   },
   "engineStrict": true,
   "engine": {
