--- a/apps/wallet-mobile/.env
+++ b/apps/wallet-mobile/.env
@@ -3,7 +3,7 @@ COMMIT=9121d1a5
 BUILD_VARIANT=STAGING
 SENTRY=https://fb3745d47d994059917e358dae581466@o1138840.ingest.sentry.io/4505319746764800
 
-DISABLE_LOG_BOX=true
+DISABLE_LOGBOX=true
 SHOW_PROD_POOLS_IN_DEV=true
 USE_TESTNET=true
 
