--- a/apps/wallet-mobile/.env.nightly
+++ b/apps/wallet-mobile/.env.nightly
@@ -2,3 +2,4 @@ COMMIT=9121d1a5
 
 BUILD_VARIANT=NIGHTLY
 SENTRY=https://59637d7dcb274b6a9e9f708e0082b3d5@o1138840.ingest.sentry.io/6260389
+DISABLE_LOGBOX=true
