--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -11,6 +11,8 @@
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
     "e2e:test:android:dev:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.dev.debug",
+    "e2e:build:android:nightly:debug": "detox build --configuration android.emu.nightly.debug",
+    "e2e:test:android:nightly:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.debug",
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
     "e2e:test:android:nightly:release": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.release",
     "e2e:build:ios:yoroi:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.yoroi.debug",
@@ -19,6 +21,7 @@
     "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
     "e2e:build:ios:nightly:release": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.release",
     "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
+    "e2e:test:all:nightly:debug": "yarn e2e:test:android:nightly:debug & yarn e2e:test:ios:nightly:debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
