Revert "Merge branch 'develop' into production"
This reverts commit f58cf0d8e25dc3e9bcb2235333763ba19e7172d6, reversing
changes made to d67eed8ef7ccc3b6ac07b036190c2861461e2c24.

--- a/apps/wallet-mobile/tsconfig.json
+++ b/apps/wallet-mobile/tsconfig.json
@@ -12,5 +12,5 @@
       "*.md": ["text-loader"]
     }
   },
-  "include": ["./.d.ts", "./src", ".storybook/decorators", "./e2e"]
+  "include": ["./.d.ts", "./src", ".storybook/decorators"]
 }
