--- a/apps/wallet-mobile/crowdin.yml
+++ b/apps/wallet-mobile/crowdin.yml
@@ -1,7 +1,7 @@
 preserve_hierarchy: true
 files:
-  - source: /apps/wallet-mobile/src/i18n/locales/**/en-US.json
-    translation: /apps/wallet-mobile/src/i18n/locales/**/%locale%.json
+  - source: /src/i18n/locales/**/en-US.json
+    translation: /src/i18n/locales/**/%locale%.json
     languages_mapping:
       locale:
         zh-CN: zh-Hans
@@ -17,8 +17,8 @@ files:
         it: it-IT
         nl: nl-NL
         cz: cs-CZ
-  - source: /apps/wallet-mobile/src/i18n/locales/**/en-US.md
-    translation: /apps/wallet-mobile/src/i18n/locales/**/%locale%.md
+  - source: /src/i18n/locales/**/en-US.md
+    translation: /src/i18n/locales/**/%locale%.md
     languages_mapping:
       locale:
         zh-CN: zh-Hans
