--- a/apps/wallet-mobile/android/app/build.gradle
+++ b/apps/wallet-mobile/android/app/build.gradle
@@ -110,6 +110,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 529
         versionName "4.13.0"
+        testBuildType System.getProperty('testBuildType', 'debug')
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     splits {
@@ -134,6 +136,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            proguardFile "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro"
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -141,6 +144,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFile "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro"
         }
     }
 
@@ -181,25 +185,29 @@ android {
 }
 
 dependencies {
+
+    androidTestImplementation('com.wix:detox:+')
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
 
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
+   // implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
 
     // If your app supports Android versions before Ice Cream Sandwich (API level 14)
-    implementation 'com.facebook.fresco:animated-base-support:1.3.0'
+    implementation('com.facebook.fresco:animated-base-support:1.3.0')
 
     // For animated GIF support
-    implementation 'com.facebook.fresco:animated-gif:2.5.0'
+    implementation ('com.facebook.fresco:animated-gif:2.5.0')
 
     // For WebP support, including animated WebP
-    implementation 'com.facebook.fresco:animated-webp:2.5.0'
+    implementation ('com.facebook.fresco:animated-webp:2.5.0')
     implementation 'com.facebook.fresco:webpsupport:2.5.0'
 
     // For WebP support, without animations
-    implementation 'com.facebook.fresco:webpsupport:2.5.0'
+    implementation ('com.facebook.fresco:webpsupport:2.5.0')
 
     // react-native-bootsplash
     implementation("androidx.core:core-splashscreen:1.0.0")
@@ -215,6 +223,11 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+      
+}
+
+configurations.implementation {
+exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
 }
 
 apply from: file("../../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
