feat(swap-react): add swap module context (#2552)
Co-authored-by: stackchain <30806844+stackchain@users.noreply.github.com>
Co-authored-by: Abdelkrim Dib <abdelkrim.dib@icloud.com>

--- a/packages/api-openswap/package.json
+++ b/packages/api-openswap/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@yoroi/swap",
+  "name": "@yoroi/api-openswap",
   "version": "0.0.1",
   "repository": {
     "type": "github",
     "url": "https://github.com/Emurgo/yoroi.git",
-    "directory": "packages/swap"
+    "directory": "packages/api-openswap"
   },
   "license": "Apache-2.0",
   "author": "EMURGO",
@@ -16,7 +16,6 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@emurgo/cross-csl-core": "2.2.0",
     "axios": "1.4.0"
   },
   "devDependencies": {
