--- a/packages/react-swap/package.json
+++ b/packages/react-swap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yoroi/swap-react",
+  "name": "@yoroi/react-swap",
   "version": "1.0.0",
   "description": "The Swap package of Yoroi SDK for react and browser",
   "main": "lib/commonjs/index",
@@ -59,6 +59,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "@emurgo/cip14-js": "^3.0.1",
+    "@yoroi/api-openswap": "0.0.1",
     "@yoroi/types": "1.0.4",
     "immer": "^10.0.2"
   },
