--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -97,6 +97,7 @@
     "@formatjs/intl-numberformat": "^8.4.1",
     "@formatjs/intl-pluralrules": "^5.2.1",
     "@formatjs/intl-relativetimeformat": "^11.2.1",
+    "@gorhom/bottom-sheet": "^4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.3",
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/clipboard": "^1.5.1",
@@ -110,6 +111,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
+    "@yoroi/swap-react": "1.0.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
