--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -9,7 +9,7 @@
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
     "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
     "e2e:build:ios:dev:debug": "detox build --configuration ios.sim.debug",
-    "e2e:test:ios:dev:debug": "detox test --configuration ios.sim.debug", 
+    "e2e:test:ios:dev:debug": "detox test --configuration ios.sim.debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
@@ -111,7 +111,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
-    "@yoroi/swap-react": "1.0.0",
+    "@yoroi/react-swap": "1.0.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
