--- a/packages/react-swap/tsconfig.json
+++ b/packages/react-swap/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "declaration": true,
     "baseUrl": "./src",
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
