--- a/.github/workflows/wallet-mobile-checks.yml
+++ b/.github/workflows/wallet-mobile-checks.yml
@@ -15,16 +15,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/wallet-mobile
-      - run: yarn lint
+      - run: yarn workspaces run lint 
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/wallet-mobile
-      - run: yarn test --ci --bail --silent
+      - run: yarn workspaces run test
   tsc:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/wallet-mobile
-      - run: yarn tsc 
+      - run: yarn workspaces run tsc 
