--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
-    "e2e:test:android:dev:debug": "detox test --configuration android.emu.dev.debug",
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
-    "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
     "e2e:build:ios:dev:debug": "detox build --configuration ios.sim.debug",
+    "e2e:test:android:dev:debug": "detox test --configuration android.emu.dev.debug",
+    "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
     "e2e:test:ios:dev:debug": "detox test --configuration ios.sim.debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
@@ -38,7 +38,7 @@
     "prestart": "sb-rn-get-stories",
     "start": "yarn react-native start --reset-cache --verbose",
     "storybook:watch": "sb-rn-watcher",
-    "test": "jest src",
+    "test": "jest src --ci --bail --silent",
     "tsc": "tsc --noEmit -p tsconfig.json",
     "tsc:cover": "yarn typescript-coverage-report -i '**/*.test.*' -i '**/*.stories*' -t html --threshold=100"
   },
