--- a/packages/react-swap/package.json
+++ b/packages/react-swap/package.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "tsc": "tsc --noEmit",
+    "tsc": "tsc --noEmit -p tsconfig.json",
     "flow": ". ./scripts/flowgen.sh",
     "clean": "del-cli lib",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
@@ -61,7 +61,6 @@
   "dependencies": {
     "@emurgo/cip14-js": "^3.0.1",
     "@yoroi/api-openswap": "0.0.1",
-    "@yoroi/types": "1.0.4",
     "immer": "^10.0.2"
   },
   "peerDependencies": {
@@ -80,10 +79,12 @@
     "@types/jest": "^28.1.2",
     "@types/react": "18.2.0",
     "@types/react-native": "0.71.6",
+    "@yoroi/types": "1.0.4",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ft-flow": "^3.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "flowgen": "^1.21.0",
     "jest": "^28.1.1",
