--- a/.github/workflows/wallet-mobile-checks.yml
+++ b/.github/workflows/wallet-mobile-checks.yml
@@ -10,21 +10,9 @@ defaults:
     working-directory: apps/wallet-mobile
 
 jobs:
-  lint:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/wallet-mobile
-      - run: yarn workspaces run lint 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/wallet-mobile
-      - run: yarn workspaces run test
-  tsc:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/wallet-mobile
-      - run: yarn workspaces run tsc 
+      - run: yarn workspaces run build 
