--- a/packages/api-openswap/package.json
+++ b/packages/api-openswap/package.json
@@ -9,17 +9,65 @@
   "license": "Apache-2.0",
   "author": "EMURGO",
   "main": "dist/index.js",
-  "source": "index",
+  "source": "src/index",
   "scripts": {
-    "build": "tsc",
+    "flow": ". ./scripts/flowgen.sh",
+    "build": "yarn tsc && yarn lint && yarn test && yarn clean && tsc --project tsconfig.json",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "tsc": "tsc --noEmit -p tsconfig.json",
     "clean": "rm -rf dist",
-    "test": "vitest"
+    "test": "vitest --run"
   },
   "dependencies": {
+    "@yoroi/api-openswap": "0.0.1",
     "axios": "1.4.0"
   },
   "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-ft-flow": "^3.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "flowgen": "^1.21.0",
+    "prettier": "^3.0.0",
     "typescript": "5.0.4",
     "vitest": "0.31.1"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "bracketSpacing": false,
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "all",
+          "useTabs": false,
+          "semi": false
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "dist/",
+    "scripts/",
+    "node_modules/",
+    "lib/",
+    "babel.config.js",
+    "jest.setup.js"
+  ],
+  "prettier": {
+    "quoteProps": "consistent",
+    "bracketSpacing": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false,
+    "semi": false
   }
 }
