--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -2,15 +2,27 @@
   "name": "@yoroi/wallet-mobile",
   "version": "4.13.0",
   "private": true,
+  "e2ePath": {
+    "ios": "./e2e/tests/_ios",
+    "android": "./e2e/tests/_android"
+  },
+  "setEnvDetox": "export TARGET_DEVICE_PLATFORM_NAME=iphonesimulator",
   "scripts": {
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "build": "yarn lint && yarn tsc && yarn test",
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
+    "e2e:test:android:dev:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.dev.debug",
+    "e2e:build:android:nightly:debug": "detox build --configuration android.emu.nightly.debug",
+    "e2e:test:android:nightly:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.debug",
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
-    "e2e:build:ios:dev:debug": "detox build --configuration ios.sim.debug",
-    "e2e:test:android:dev:debug": "detox test --configuration android.emu.dev.debug",
-    "e2e:test:android:nightly:release": "detox test --configuration android.emu.nightly.release",
-    "e2e:test:ios:dev:debug": "detox test --configuration ios.sim.debug",
+    "e2e:test:android:nightly:release": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.release",
+    "e2e:build:ios:yoroi:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.yoroi.debug",
+    "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
+    "e2e:build:ios:nightly:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.debug",
+    "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
+    "e2e:build:ios:nightly:release": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.release",
+    "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
+    "e2e:test:all:nightly:debug": "yarn e2e:test:android:nightly:debug & yarn e2e:test:ios:nightly:debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
@@ -265,7 +277,8 @@
     "ts-node": "^10.7.0",
     "ts-sinon": "^2.0.2",
     "typescript": "4.8.4",
-    "typescript-coverage-report": "^0.6.4"
+    "typescript-coverage-report": "^0.6.4",
+    "yargs": "^17.7.2"
   },
   "engineStrict": true,
   "engine": {
