--- a/packages/react-swap/package.json
+++ b/packages/react-swap/package.json
@@ -179,7 +179,8 @@
       [
         "typescript",
         {
-          "project": "tsconfig.build.json"
+          "project": "tsconfig.build.json",
+          "tsc": "./node_modules/.bin/tsc"
         }
       ]
     ]
