--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -2,27 +2,22 @@
   "name": "@yoroi/wallet-mobile",
   "version": "4.13.0",
   "private": true,
-  "e2ePath": {
-    "ios": "./e2e/tests/_ios",
-    "android": "./e2e/tests/_android"
-  },
-  "setEnvDetox": "export TARGET_DEVICE_PLATFORM_NAME=iphonesimulator",
   "scripts": {
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "build": "yarn lint && yarn tsc && yarn test",
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
-    "e2e:test:android:dev:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.dev.debug",
     "e2e:build:android:nightly:debug": "detox build --configuration android.emu.nightly.debug",
-    "e2e:test:android:nightly:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.debug",
     "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
-    "e2e:test:android:nightly:release": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.release",
-    "e2e:build:ios:yoroi:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.yoroi.debug",
-    "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
     "e2e:build:ios:nightly:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.debug",
-    "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
     "e2e:build:ios:nightly:release": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.release",
-    "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
+    "e2e:build:ios:yoroi:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.yoroi.debug",
     "e2e:test:all:nightly:debug": "yarn e2e:test:android:nightly:debug & yarn e2e:test:ios:nightly:debug",
+    "e2e:test:android:dev:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.dev.debug",
+    "e2e:test:android:nightly:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.debug",
+    "e2e:test:android:nightly:release": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.release",
+    "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
+    "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
+    "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
@@ -124,7 +119,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
-    "@yoroi/react-swap": "1.0.0",
+    "@yoroi/react-swap": "^1.0.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
@@ -281,10 +276,15 @@
     "yargs": "^17.7.2"
   },
   "engineStrict": true,
+  "e2ePath": {
+    "ios": "./e2e/tests/_ios",
+    "android": "./e2e/tests/_android"
+  },
   "engine": {
     "node": "~16.19.0",
     "npm": "~7.19.1"
   },
+  "setEnvDetox": "export TARGET_DEVICE_PLATFORM_NAME=iphonesimulator",
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
