--- a/packages/api-openswap/package.json
+++ b/packages/api-openswap/package.json
@@ -12,6 +12,8 @@
   "source": "src/index",
   "scripts": {
     "flow": ". ./scripts/flowgen.sh",
+    "publish:beta": "yarn build && npm publish --scope yoroi --tag beta --access beta",
+    "publish:prod": "yarn build && npm publish --scope yoroi --access public",
     "build": "yarn tsc && yarn lint && yarn test && yarn clean && tsc --project tsconfig.json",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "tsc": "tsc --noEmit -p tsconfig.json",
