--- a/packages/api-openswap/package.json
+++ b/packages/api-openswap/package.json
@@ -12,6 +12,7 @@
   "source": "src/index",
   "scripts": {
     "flow": ". ./scripts/flowgen.sh",
+    "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
     "publish:beta": "yarn build && npm publish --scope yoroi --tag beta --access beta",
     "publish:prod": "yarn build && npm publish --scope yoroi --access public",
     "build": "yarn tsc && yarn lint && yarn test && yarn clean && tsc --project tsconfig.json",
@@ -25,6 +26,7 @@
     "axios": "1.4.0"
   },
   "devDependencies": {
+    "dependency-cruiser": "^13.1.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-ft-flow": "^3.0.0",
