Rename SENTRY_DSN variable

--- a/apps/wallet-mobile/.env.nightly
+++ b/apps/wallet-mobile/.env.nightly
@@ -1,5 +1,5 @@
 COMMIT=cc2ffa0d
 
 BUILD_VARIANT=NIGHTLY
-SENTRY=https://59637d7dcb274b6a9e9f708e0082b3d5@o1138840.ingest.sentry.io/6260389
+SENTRY_DSN=https://59637d7dcb274b6a9e9f708e0082b3d5@o1138840.ingest.sentry.io/6260389
 DISABLE_LOGBOX=true
