--- a/apps/wallet-mobile/.env.staging
+++ b/apps/wallet-mobile/.env.staging
@@ -1,7 +1,7 @@
 COMMIT=cc2ffa0d
 
 BUILD_VARIANT=STAGING
-SENTRY=https://fb3745d47d994059917e358dae581466@o1138840.ingest.sentry.io/4505319746764800
+SENTRY_DSN=https://fb3745d47d994059917e358dae581466@o1138840.ingest.sentry.io/4505319746764800
 
 USE_TESTNET=true
 DISABLE_LOG_BOX=true
