fix(sentry): Restore sentry (#2588)

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -118,6 +118,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/routers": "^6.1.5",
     "@react-navigation/stack": "^6.3.16",
+    "@sentry/react-native": "^5.8.0",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
     "@yoroi/react-swap": "^1.0.0",
@@ -136,6 +137,7 @@
     "expo": ">=48.0.0-0 <49.0.0",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "^13.2.1",
+    "expo-device": "^5.4.0",
     "expo-status-bar": "~1.4.4",
     "jsc-android": "241213.1.0",
     "lodash": "^4.17.21",
@@ -170,6 +172,7 @@
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.3",
     "reselect": "^4.0.0",
+    "sentry-expo": "^7.0.1",
     "stream-browserify": "3.0.0",
     "tinycolor2": "1.4.2",
     "url": "^0.11.0",
