chore: renamed api-openswap

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "workspaces": [
     "packages/types",
-    "packages/api-openswap",
+    "packages/openswap",
     "packages/*",
     "apps/*"
   ]
